Fix T99083: audio bad in command-line video player (blender -a)

There was a wrong sample size computation in PulseAudioDevice.
The sample format is switched to float32 for the command-line player.