source/blender/windowmanager/intern/wm_playanim.c
@@ -1856,7 +1856,7 @@ void WM_main_playanim(int argc, const char **argv)
     AUD_DeviceSpecs specs;
 
     specs.rate = AUD_RATE_48000;
-    specs.format = AUD_FORMAT_S16;
+    specs.format = AUD_FORMAT_FLOAT32;
     specs.channels = AUD_CHANNELS_STEREO;
 
     AUD_initOnce();
